crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__app_renders_with_one_batch.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Hello agent

The answer is 42.






❯

 @pattern-default │ 0 agents │ 0 ctx │ ● disconnected
