crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__display_note_as_toast_when_hidden.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Hello                                           agent processing query...

World






❯

 @supervisor │ 0 agents │ 0 ctx │ ● connected
