crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__display_note_in_panel_when_visible.snap
---
source: crates/pattern_cli/src/tui/app.rs
assertion_line: 1979
expression: output
---
[you] Hello                                                                         agent processing query...
                                                                                     panel ─────────────────────────────
World










❯

 no fronting configured │ 0 agents │ 0 ctx │ ● connected │ panel: visible
