crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__full_app_with_panel_hidden.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Hello agent

The answer is 42.






❯

 @supervisor │ 0 agents │ 0 ctx │ ● connected
