crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__full_app_with_panel_visible.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Hello agent                                                                  │agent started
                                                                                   │ panel ─────────────────────────────
The answer is 42.                                                                  │processing query...
Stop: EndTurn                                                                      │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
                                                                                   │
❯

 no fronting configured │ 0 agents │ 0 ctx │ ● connected │ panel: visible
