crates/pattern_cli/src/tui/snapshots/pattern_cli__tui__app__tests__thinking_expanded_in_panel.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Analyze this                                                                   thinking ──────────────────────────
                                                                                    Let me consider the options
▸ thinking: Let me consider the options carefully... Option A is good. O...         carefully...
I recommend option B.                                                               Option A is good.
                                                                                    Option B is better.








❯

 @supervisor │ 0 agents │ 0 ctx │ ● connected │ panel: visible
